[gd_scene load_steps=16 format=4 uid="uid://cvbqs0timnjh5"]

[ext_resource type="Texture2D" uid="uid://cvk2fbdvsase" path="res://rail_grid/rails-tileset.png" id="1_tp5ej"]
[ext_resource type="Script" path="res://rail_grid/rail_grid.gd" id="1_xi0ee"]
[ext_resource type="Script" path="res://rail_grid/rails.gd" id="2_r2m4a"]
[ext_resource type="Script" path="res://rail_grid/edges_shader.gd" id="3_4r8a6"]
[ext_resource type="Shader" path="res://rail_grid/edges_shader.gdshader" id="4_1ly7j"]
[ext_resource type="Texture2D" uid="uid://bmbxqhinn7sji" path="res://rail_grid/edges-tileset.png" id="5_5hmgw"]
[ext_resource type="Script" path="res://rail_grid/edges.gd" id="6_w8aok"]
[ext_resource type="Texture2D" uid="uid://bntu4bi4tch82" path="res://rail_grid/hextile.png" id="7_a6b3g"]
[ext_resource type="Script" path="res://rail_grid/grid.gd" id="8_owd5w"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7mk0m"]
texture = ExtResource("1_tp5ej")
texture_region_size = Vector2i(120, 140)
56:0/0 = 0
55:0/0 = 0
54:0/0 = 0
53:0/0 = 0
63:0/0 = 0
62:0/0 = 0
61:0/0 = 0
60:0/0 = 0
59:0/0 = 0
58:0/0 = 0
57:0/0 = 0
51:0/0 = 0
52:0/0 = 0
50:0/0 = 0
49:0/0 = 0
48:0/0 = 0
47:0/0 = 0
46:0/0 = 0
45:0/0 = 0
44:0/0 = 0
43:0/0 = 0
42:0/0 = 0
41:0/0 = 0
40:0/0 = 0
39:0/0 = 0
38:0/0 = 0
37:0/0 = 0
36:0/0 = 0
35:0/0 = 0
34:0/0 = 0
33:0/0 = 0
32:0/0 = 0
31:0/0 = 0
30:0/0 = 0
29:0/0 = 0
28:0/0 = 0
27:0/0 = 0
26:0/0 = 0
25:0/0 = 0
24:0/0 = 0
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0

[sub_resource type="TileSet" id="TileSet_mrsdy"]
tile_shape = 3
tile_size = Vector2i(120, 140)
sources/0 = SubResource("TileSetAtlasSource_7mk0m")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_r1mm2"]
texture = ExtResource("5_5hmgw")
texture_region_size = Vector2i(60, 70)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0

[sub_resource type="TileSet" id="TileSet_e7xmb"]
tile_shape = 3
tile_size = Vector2i(60, 70)
sources/0 = SubResource("TileSetAtlasSource_r1mm2")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_angpt"]
texture = ExtResource("7_a6b3g")
texture_region_size = Vector2i(120, 140)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_fdjwu"]
tile_shape = 3
tile_size = Vector2i(120, 140)
sources/0 = SubResource("TileSetAtlasSource_angpt")

[node name="RailGrid" type="Node2D"]
script = ExtResource("1_xi0ee")

[node name="Rails" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_mrsdy")
script = ExtResource("2_r2m4a")

[node name="EdgesShader" type="CanvasGroup" parent="."]
script = ExtResource("3_4r8a6")
shader = ExtResource("4_1ly7j")

[node name="Edges" type="TileMapLayer" parent="EdgesShader"]
unique_name_in_owner = true
position = Vector2(30, 35)
tile_map_data = PackedByteArray("AADs/+3/AAACAAAAAADs/+7/AAACAAAAAADs/+//AAACAAAAAADs//H/AAACAAAAAADs//L/AAACAAAAAADs//P/AAACAAAAAADs//X/AAACAAAAAADs//b/AAACAAAAAADs//f/AAACAAAAAADs//n/AAACAAAAAADs//r/AAACAAAAAADs//v/AAACAAAAAADs//3/AAACAAAAAADs//7/AAACAAAAAADs////AAACAAAAAADs/wEAAAACAAAAAADs/wIAAAACAAAAAADs/wMAAAACAAAAAADs/wUAAAACAAAAAADs/wYAAAACAAAAAADs/wcAAAACAAAAAADs/wkAAAACAAAAAADs/woAAAACAAAAAADs/wsAAAACAAAAAADs/w0AAAACAAAAAADs/w4AAAACAAAAAADs/w8AAAACAAAAAADs/xEAAAACAAAAAADs/xIAAAACAAAAAADs/xMAAAACAAAAAADt/+z/AAACAAAAAADt/+3/AAACAAAAAADt/+//AAACAAAAAADt//D/AAACAAAAAADt//H/AAACAAAAAADt//P/AAACAAAAAADt//T/AAACAAAAAADt//X/AAACAAAAAADt//f/AAACAAAAAADt//j/AAACAAAAAADt//n/AAACAAAAAADt//v/AAACAAAAAADt//z/AAACAAAAAADt//3/AAACAAAAAADt////AAACAAAAAADt/wAAAAACAAAAAADt/wEAAAACAAAAAADt/wMAAAACAAAAAADt/wQAAAACAAAAAADt/wUAAAACAAAAAADt/wcAAAACAAAAAADt/wgAAAACAAAAAADt/wkAAAACAAAAAADt/wsAAAACAAAAAADt/wwAAAACAAAAAADt/w0AAAACAAAAAADt/w8AAAACAAAAAADt/xAAAAACAAAAAADt/xEAAAACAAAAAADt/xMAAAACAAAAAADu/+3/AAACAAAAAADu/+7/AAACAAAAAADu/+//AAACAAAAAADu//H/AAACAAAAAADu//L/AAACAAAAAADu//P/AAACAAAAAADu//X/AAACAAAAAADu//b/AAACAAAAAADu//f/AAACAAAAAADu//n/AAACAAAAAADu//r/AAACAAAAAADu//v/AAACAAAAAADu//3/AAACAAAAAADu//7/AAACAAAAAADu////AAACAAAAAADu/wEAAAACAAAAAADu/wIAAAACAAAAAADu/wMAAAACAAAAAADu/wUAAAACAAAAAADu/wYAAAACAAAAAADu/wcAAAACAAAAAADu/wkAAAACAAAAAADu/woAAAACAAAAAADu/wsAAAACAAAAAADu/w0AAAACAAAAAADu/w4AAAACAAAAAADu/w8AAAACAAAAAADu/xEAAAACAAAAAADu/xIAAAACAAAAAADu/xMAAAACAAAAAADv/+z/AAACAAAAAADv/+3/AAACAAAAAADv/+//AAACAAAAAADv//D/AAACAAAAAADv//H/AAACAAAAAADv//P/AAACAAAAAADv//T/AAACAAAAAADv//X/AAACAAAAAADv//f/AAACAAAAAADv//j/AAACAAAAAADv//n/AAACAAAAAADv//v/AAACAAAAAADv//z/AAACAAAAAADv//3/AAACAAAAAADv////AAACAAAAAADv/wAAAAACAAAAAADv/wEAAAACAAAAAADv/wMAAAACAAAAAADv/wQAAAACAAAAAADv/wUAAAACAAAAAADv/wcAAAACAAAAAADv/wgAAAACAAAAAADv/wkAAAACAAAAAADv/wsAAAACAAAAAADv/wwAAAACAAAAAADv/w0AAAACAAAAAADv/w8AAAACAAAAAADv/xAAAAACAAAAAADv/xEAAAACAAAAAADv/xMAAAACAAAAAADw/+3/AAACAAAAAADw/+7/AAACAAAAAADw/+//AAACAAAAAADw//H/AAACAAAAAADw//L/AAACAAAAAADw//P/AAACAAAAAADw//X/AAACAAAAAADw//b/AAACAAAAAADw//f/AAACAAAAAADw//n/AAACAAAAAADw//r/AAACAAAAAADw//v/AAACAAAAAADw//3/AAACAAAAAADw//7/AAACAAAAAADw////AAACAAAAAADw/wEAAAACAAAAAADw/wIAAAACAAAAAADw/wMAAAACAAAAAADw/wUAAAACAAAAAADw/wYAAAACAAAAAADw/wcAAAACAAAAAADw/wkAAAACAAAAAADw/woAAAACAAAAAADw/wsAAAACAAAAAADw/w0AAAACAAAAAADw/w4AAAACAAAAAADw/w8AAAACAAAAAADw/xEAAAACAAAAAADw/xIAAAACAAAAAADw/xMAAAACAAAAAADx/+z/AAACAAAAAADx/+3/AAACAAAAAADx/+//AAACAAAAAADx//D/AAACAAAAAADx//H/AAACAAAAAADx//P/AAACAAAAAADx//T/AAACAAAAAADx//X/AAACAAAAAADx//f/AAACAAAAAADx//j/AAACAAAAAADx//n/AAACAAAAAADx//v/AAACAAAAAADx//z/AAACAAAAAADx//3/AAACAAAAAADx////AAACAAAAAADx/wAAAAACAAAAAADx/wEAAAACAAAAAADx/wMAAAACAAAAAADx/wQAAAACAAAAAADx/wUAAAACAAAAAADx/wcAAAACAAAAAADx/wgAAAACAAAAAADx/wkAAAACAAAAAADx/wsAAAACAAAAAADx/wwAAAACAAAAAADx/w0AAAACAAAAAADx/w8AAAACAAAAAADx/xAAAAACAAAAAADx/xEAAAACAAAAAADx/xMAAAACAAAAAADy/+3/AAACAAAAAADy/+7/AAACAAAAAADy/+//AAACAAAAAADy//H/AAACAAAAAADy//L/AAACAAAAAADy//P/AAACAAAAAADy//X/AAACAAAAAADy//b/AAACAAAAAADy//f/AAACAAAAAADy//n/AAACAAAAAADy//r/AAACAAAAAADy//v/AAACAAAAAADy//3/AAACAAAAAADy//7/AAACAAAAAADy////AAACAAAAAADy/wEAAAACAAAAAADy/wIAAAACAAAAAADy/wMAAAACAAAAAADy/wUAAAACAAAAAADy/wYAAAACAAAAAADy/wcAAAACAAAAAADy/wkAAAACAAAAAADy/woAAAACAAAAAADy/wsAAAACAAAAAADy/w0AAAACAAAAAADy/w4AAAACAAAAAADy/w8AAAACAAAAAADy/xEAAAACAAAAAADy/xIAAAACAAAAAADy/xMAAAACAAAAAADz/+z/AAACAAAAAADz/+3/AAACAAAAAADz/+//AAACAAAAAADz//D/AAACAAAAAADz//H/AAACAAAAAADz//P/AAACAAAAAADz//T/AAACAAAAAADz//X/AAACAAAAAADz//f/AAACAAAAAADz//j/AAACAAAAAADz//n/AAACAAAAAADz//v/AAACAAAAAADz//z/AAACAAAAAADz//3/AAACAAAAAADz////AAACAAAAAADz/wAAAAACAAAAAADz/wEAAAACAAAAAADz/wMAAAACAAAAAADz/wQAAAACAAAAAADz/wUAAAACAAAAAADz/wcAAAACAAAAAADz/wgAAAACAAAAAADz/wkAAAACAAAAAADz/wsAAAACAAAAAADz/wwAAAACAAAAAADz/w0AAAACAAAAAADz/w8AAAACAAAAAADz/xAAAAACAAAAAADz/xEAAAACAAAAAADz/xMAAAACAAAAAAD0/+3/AAACAAAAAAD0/+7/AAACAAAAAAD0/+//AAACAAAAAAD0//H/AAACAAAAAAD0//L/AAACAAAAAAD0//P/AAACAAAAAAD0//X/AAACAAAAAAD0//b/AAACAAAAAAD0//f/AAACAAAAAAD0//n/AAACAAAAAAD0//r/AAACAAAAAAD0//v/AAACAAAAAAD0//3/AAACAAAAAAD0//7/AAACAAAAAAD0////AAACAAAAAAD0/wEAAAACAAAAAAD0/wIAAAACAAAAAAD0/wMAAAACAAAAAAD0/wUAAAACAAAAAAD0/wYAAAACAAAAAAD0/wcAAAACAAAAAAD0/wkAAAACAAAAAAD0/woAAAACAAAAAAD0/wsAAAACAAAAAAD0/w0AAAACAAAAAAD0/w4AAAACAAAAAAD0/w8AAAACAAAAAAD0/xEAAAACAAAAAAD0/xIAAAACAAAAAAD0/xMAAAACAAAAAAD1/+z/AAACAAAAAAD1/+3/AAACAAAAAAD1/+//AAACAAAAAAD1//D/AAACAAAAAAD1//H/AAACAAAAAAD1//P/AAACAAAAAAD1//T/AAACAAAAAAD1//X/AAACAAAAAAD1//f/AAACAAAAAAD1//j/AAACAAAAAAD1//n/AAACAAAAAAD1//v/AAACAAAAAAD1//z/AAACAAAAAAD1//3/AAACAAAAAAD1////AAACAAAAAAD1/wAAAAACAAAAAAD1/wEAAAACAAAAAAD1/wMAAAACAAAAAAD1/wQAAAACAAAAAAD1/wUAAAACAAAAAAD1/wcAAAACAAAAAAD1/wgAAAACAAAAAAD1/wkAAAACAAAAAAD1/wsAAAACAAAAAAD1/wwAAAACAAAAAAD1/w0AAAACAAAAAAD1/w8AAAACAAAAAAD1/xAAAAACAAAAAAD1/xEAAAACAAAAAAD1/xMAAAACAAAAAAD2/+3/AAACAAAAAAD2/+7/AAACAAAAAAD2/+//AAACAAAAAAD2//H/AAACAAAAAAD2//L/AAACAAAAAAD2//P/AAACAAAAAAD2//X/AAACAAAAAAD2//b/AAACAAAAAAD2//f/AAACAAAAAAD2//n/AAACAAAAAAD2//r/AAACAAAAAAD2//v/AAACAAAAAAD2//3/AAACAAAAAAD2//7/AAACAAAAAAD2////AAACAAAAAAD2/wEAAAACAAAAAAD2/wIAAAACAAAAAAD2/wMAAAACAAAAAAD2/wUAAAACAAAAAAD2/wYAAAACAAAAAAD2/wcAAAACAAAAAAD2/wkAAAACAAAAAAD2/woAAAACAAAAAAD2/wsAAAACAAAAAAD2/w0AAAACAAAAAAD2/w4AAAACAAAAAAD2/w8AAAACAAAAAAD2/xEAAAACAAAAAAD2/xIAAAACAAAAAAD2/xMAAAACAAAAAAD3/+z/AAACAAAAAAD3/+3/AAACAAAAAAD3/+//AAACAAAAAAD3//D/AAACAAAAAAD3//H/AAACAAAAAAD3//P/AAACAAAAAAD3//T/AAACAAAAAAD3//X/AAACAAAAAAD3//f/AAACAAAAAAD3//j/AAACAAAAAAD3//n/AAACAAAAAAD3//v/AAACAAAAAAD3//z/AAACAAAAAAD3//3/AAACAAAAAAD3////AAACAAAAAAD3/wAAAAACAAAAAAD3/wEAAAACAAAAAAD3/wMAAAACAAAAAAD3/wQAAAACAAAAAAD3/wUAAAACAAAAAAD3/wcAAAACAAAAAAD3/wgAAAACAAAAAAD3/wkAAAACAAAAAAD3/wsAAAACAAAAAAD3/wwAAAACAAAAAAD3/w0AAAACAAAAAAD3/w8AAAACAAAAAAD3/xAAAAACAAAAAAD3/xEAAAACAAAAAAD3/xMAAAACAAAAAAD4/+3/AAACAAAAAAD4/+7/AAACAAAAAAD4/+//AAACAAAAAAD4//H/AAACAAAAAAD4//L/AAACAAAAAAD4//P/AAACAAAAAAD4//X/AAACAAAAAAD4//b/AAACAAAAAAD4//f/AAACAAAAAAD4//n/AAACAAAAAAD4//r/AAACAAAAAAD4//v/AAACAAAAAAD4//3/AAACAAAAAAD4//7/AAACAAAAAAD4////AAACAAAAAAD4/wEAAAACAAAAAAD4/wIAAAACAAAAAAD4/wMAAAACAAAAAAD4/wUAAAACAAAAAAD4/wYAAAACAAAAAAD4/wcAAAACAAAAAAD4/wkAAAACAAAAAAD4/woAAAACAAAAAAD4/wsAAAACAAAAAAD4/w0AAAACAAAAAAD4/w4AAAACAAAAAAD4/w8AAAACAAAAAAD4/xEAAAACAAAAAAD4/xIAAAACAAAAAAD4/xMAAAACAAAAAAD5/+z/AAACAAAAAAD5/+3/AAACAAAAAAD5/+//AAACAAAAAAD5//D/AAACAAAAAAD5//H/AAACAAAAAAD5//P/AAACAAAAAAD5//T/AAACAAAAAAD5//X/AAACAAAAAAD5//f/AAACAAAAAAD5//j/AAACAAAAAAD5//n/AAACAAAAAAD5//v/AAACAAAAAAD5//z/AAACAAAAAAD5//3/AAACAAAAAAD5////AAACAAAAAAD5/wAAAAACAAAAAAD5/wEAAAACAAAAAAD5/wMAAAACAAAAAAD5/wQAAAACAAAAAAD5/wUAAAACAAAAAAD5/wcAAAACAAAAAAD5/wgAAAACAAAAAAD5/wkAAAACAAAAAAD5/wsAAAACAAAAAAD5/wwAAAACAAAAAAD5/w0AAAACAAAAAAD5/w8AAAACAAAAAAD5/xAAAAACAAAAAAD5/xEAAAACAAAAAAD5/xMAAAACAAAAAAD6/+3/AAACAAAAAAD6/+7/AAACAAAAAAD6/+//AAACAAAAAAD6//H/AAACAAAAAAD6//L/AAACAAAAAAD6//P/AAACAAAAAAD6//X/AAACAAAAAAD6//b/AAACAAAAAAD6//f/AAACAAAAAAD6//n/AAACAAAAAAD6//r/AAACAAAAAAD6//v/AAACAAAAAAD6//3/AAACAAAAAAD6//7/AAACAAAAAAD6////AAACAAAAAAD6/wEAAAACAAAAAAD6/wIAAAACAAAAAAD6/wMAAAACAAAAAAD6/wUAAAACAAAAAAD6/wYAAAACAAAAAAD6/wcAAAACAAAAAAD6/wkAAAACAAAAAAD6/woAAAACAAAAAAD6/wsAAAACAAAAAAD6/w0AAAACAAAAAAD6/w4AAAACAAAAAAD6/w8AAAACAAAAAAD6/xEAAAACAAAAAAD6/xIAAAACAAAAAAD6/xMAAAACAAAAAAD7/+z/AAACAAAAAAD7/+3/AAACAAAAAAD7/+//AAACAAAAAAD7//D/AAACAAAAAAD7//H/AAACAAAAAAD7//P/AAACAAAAAAD7//T/AAACAAAAAAD7//X/AAACAAAAAAD7//f/AAACAAAAAAD7//j/AAACAAAAAAD7//n/AAACAAAAAAD7//v/AAACAAAAAAD7//z/AAACAAAAAAD7//3/AAACAAAAAAD7////AAACAAAAAAD7/wAAAAACAAAAAAD7/wEAAAACAAAAAAD7/wMAAAACAAAAAAD7/wQAAAACAAAAAAD7/wUAAAACAAAAAAD7/wcAAAACAAAAAAD7/wgAAAACAAAAAAD7/wkAAAACAAAAAAD7/wsAAAACAAAAAAD7/wwAAAACAAAAAAD7/w0AAAACAAAAAAD7/w8AAAACAAAAAAD7/xAAAAACAAAAAAD7/xEAAAACAAAAAAD7/xMAAAACAAAAAAD8/+3/AAACAAAAAAD8/+7/AAACAAAAAAD8/+//AAACAAAAAAD8//H/AAACAAAAAAD8//L/AAACAAAAAAD8//P/AAACAAAAAAD8//X/AAACAAAAAAD8//b/AAACAAAAAAD8//f/AAACAAAAAAD8//n/AAACAAAAAAD8//r/AAACAAAAAAD8//v/AAACAAAAAAD8//3/AAACAAAAAAD8//7/AAACAAAAAAD8////AAACAAAAAAD8/wEAAAACAAAAAAD8/wIAAAACAAAAAAD8/wMAAAACAAAAAAD8/wUAAAACAAAAAAD8/wYAAAACAAAAAAD8/wcAAAACAAAAAAD8/wkAAAACAAAAAAD8/woAAAACAAAAAAD8/wsAAAACAAAAAAD8/w0AAAACAAAAAAD8/w4AAAACAAAAAAD8/w8AAAACAAAAAAD8/xEAAAACAAAAAAD8/xIAAAACAAAAAAD8/xMAAAACAAAAAAD9/+z/AAACAAAAAAD9/+3/AAACAAAAAAD9/+//AAACAAAAAAD9//D/AAACAAAAAAD9//H/AAACAAAAAAD9//P/AAACAAAAAAD9//T/AAACAAAAAAD9//X/AAACAAAAAAD9//f/AAACAAAAAAD9//j/AAACAAAAAAD9//n/AAACAAAAAAD9//v/AAACAAAAAAD9//z/AAACAAAAAAD9//3/AAACAAAAAAD9////AAACAAAAAAD9/wAAAAACAAAAAAD9/wEAAAACAAAAAAD9/wMAAAACAAAAAAD9/wQAAAACAAAAAAD9/wUAAAACAAAAAAD9/wcAAAACAAAAAAD9/wgAAAACAAAAAAD9/wkAAAACAAAAAAD9/wsAAAACAAAAAAD9/wwAAAACAAAAAAD9/w0AAAACAAAAAAD9/w8AAAACAAAAAAD9/xAAAAACAAAAAAD9/xEAAAACAAAAAAD9/xMAAAACAAAAAAD+/+3/AAACAAAAAAD+/+7/AAACAAAAAAD+/+//AAACAAAAAAD+//H/AAACAAAAAAD+//L/AAACAAAAAAD+//P/AAACAAAAAAD+//X/AAACAAAAAAD+//b/AAACAAAAAAD+//f/AAACAAAAAAD+//n/AAACAAAAAAD+//r/AAACAAAAAAD+//v/AAACAAAAAAD+//3/AAACAAAAAAD+//7/AAACAAAAAAD+////AAACAAAAAAD+/wEAAAACAAAAAAD+/wIAAAACAAAAAAD+/wMAAAACAAAAAAD+/wUAAAACAAAAAAD+/wYAAAACAAAAAAD+/wcAAAACAAAAAAD+/wkAAAACAAAAAAD+/woAAAACAAAAAAD+/wsAAAACAAAAAAD+/w0AAAACAAAAAAD+/w4AAAACAAAAAAD+/w8AAAACAAAAAAD+/xEAAAACAAAAAAD+/xIAAAACAAAAAAD+/xMAAAACAAAAAAD//+z/AAACAAAAAAD//+3/AAACAAAAAAD//+//AAACAAAAAAD///D/AAACAAAAAAD///H/AAACAAAAAAD///P/AAACAAAAAAD///T/AAACAAAAAAD///X/AAACAAAAAAD///f/AAACAAAAAAD///j/AAACAAAAAAD///n/AAACAAAAAAD///v/AAACAAAAAAD///z/AAACAAAAAAD///3/AAACAAAAAAD/////AAACAAAAAAD//wAAAAACAAAAAAD//wEAAAACAAAAAAD//wMAAAACAAAAAAD//wQAAAACAAAAAAD//wUAAAACAAAAAAD//wcAAAACAAAAAAD//wgAAAACAAAAAAD//wkAAAACAAAAAAD//wsAAAACAAAAAAD//wwAAAACAAAAAAD//w0AAAACAAAAAAD//w8AAAACAAAAAAD//xAAAAACAAAAAAD//xEAAAACAAAAAAD//xMAAAACAAAAAAAAAO3/AAACAAAAAAAAAO7/AAACAAAAAAAAAO//AAACAAAAAAAAAPH/AAACAAAAAAAAAPL/AAACAAAAAAAAAPP/AAACAAAAAAAAAPX/AAACAAAAAAAAAPb/AAACAAAAAAAAAPf/AAACAAAAAAAAAPn/AAACAAAAAAAAAPr/AAACAAAAAAAAAPv/AAACAAAAAAAAAP3/AAACAAAAAAAAAP7/AAACAAAAAAAAAP//AAACAAAAAAAAAAEAAAACAAAAAAAAAAIAAAACAAAAAAAAAAMAAAACAAAAAAAAAAUAAAACAAAAAAAAAAYAAAACAAAAAAAAAAcAAAACAAAAAAAAAAkAAAACAAAAAAAAAAoAAAACAAAAAAAAAAsAAAACAAAAAAAAAA0AAAACAAAAAAAAAA4AAAACAAAAAAAAAA8AAAACAAAAAAAAABEAAAACAAAAAAAAABIAAAACAAAAAAAAABMAAAACAAAAAAABAOz/AAACAAAAAAABAO3/AAACAAAAAAABAO//AAACAAAAAAABAPD/AAACAAAAAAABAPH/AAACAAAAAAABAPP/AAACAAAAAAABAPT/AAACAAAAAAABAPX/AAACAAAAAAABAPf/AAACAAAAAAABAPj/AAACAAAAAAABAPn/AAACAAAAAAABAPv/AAACAAAAAAABAPz/AAACAAAAAAABAP3/AAACAAAAAAABAP//AAACAAAAAAABAAAAAAACAAAAAAABAAEAAAACAAAAAAABAAMAAAACAAAAAAABAAQAAAACAAAAAAABAAUAAAACAAAAAAABAAcAAAACAAAAAAABAAgAAAACAAAAAAABAAkAAAACAAAAAAABAAsAAAACAAAAAAABAAwAAAACAAAAAAABAA0AAAACAAAAAAABAA8AAAACAAAAAAABABAAAAACAAAAAAABABEAAAACAAAAAAABABMAAAACAAAAAAACAO3/AAACAAAAAAACAO7/AAACAAAAAAACAO//AAACAAAAAAACAPH/AAACAAAAAAACAPL/AAACAAAAAAACAPP/AAACAAAAAAACAPX/AAACAAAAAAACAPb/AAACAAAAAAACAPf/AAACAAAAAAACAPn/AAACAAAAAAACAPr/AAACAAAAAAACAPv/AAACAAAAAAACAP3/AAACAAAAAAACAP7/AAACAAAAAAACAP//AAACAAAAAAACAAEAAAACAAAAAAACAAIAAAACAAAAAAACAAMAAAACAAAAAAACAAUAAAACAAAAAAACAAYAAAACAAAAAAACAAcAAAACAAAAAAACAAkAAAACAAAAAAACAAoAAAACAAAAAAACAAsAAAACAAAAAAACAA0AAAACAAAAAAACAA4AAAACAAAAAAACAA8AAAACAAAAAAACABEAAAACAAAAAAACABIAAAACAAAAAAACABMAAAACAAAAAAADAOz/AAACAAAAAAADAO3/AAACAAAAAAADAO//AAACAAAAAAADAPD/AAACAAAAAAADAPH/AAACAAAAAAADAPP/AAACAAAAAAADAPT/AAACAAAAAAADAPX/AAACAAAAAAADAPf/AAACAAAAAAADAPj/AAACAAAAAAADAPn/AAACAAAAAAADAPv/AAACAAAAAAADAPz/AAACAAAAAAADAP3/AAACAAAAAAADAP//AAACAAAAAAADAAAAAAACAAAAAAADAAEAAAACAAAAAAADAAMAAAACAAAAAAADAAQAAAACAAAAAAADAAUAAAACAAAAAAADAAcAAAACAAAAAAADAAgAAAACAAAAAAADAAkAAAACAAAAAAADAAsAAAACAAAAAAADAAwAAAACAAAAAAADAA0AAAACAAAAAAADAA8AAAACAAAAAAADABAAAAACAAAAAAADABEAAAACAAAAAAADABMAAAACAAAAAAAEAO3/AAACAAAAAAAEAO7/AAACAAAAAAAEAO//AAACAAAAAAAEAPH/AAACAAAAAAAEAPL/AAACAAAAAAAEAPP/AAACAAAAAAAEAPX/AAACAAAAAAAEAPb/AAACAAAAAAAEAPf/AAACAAAAAAAEAPn/AAACAAAAAAAEAPr/AAACAAAAAAAEAPv/AAACAAAAAAAEAP3/AAACAAAAAAAEAP7/AAACAAAAAAAEAP//AAACAAAAAAAEAAEAAAACAAAAAAAEAAIAAAACAAAAAAAEAAMAAAACAAAAAAAEAAUAAAACAAAAAAAEAAYAAAACAAAAAAAEAAcAAAACAAAAAAAEAAkAAAACAAAAAAAEAAoAAAACAAAAAAAEAAsAAAACAAAAAAAEAA0AAAACAAAAAAAEAA4AAAACAAAAAAAEAA8AAAACAAAAAAAEABEAAAACAAAAAAAEABIAAAACAAAAAAAEABMAAAACAAAAAAAFAOz/AAACAAAAAAAFAO3/AAACAAAAAAAFAO//AAACAAAAAAAFAPD/AAACAAAAAAAFAPH/AAACAAAAAAAFAPP/AAACAAAAAAAFAPT/AAACAAAAAAAFAPX/AAACAAAAAAAFAPf/AAACAAAAAAAFAPj/AAACAAAAAAAFAPn/AAACAAAAAAAFAPv/AAACAAAAAAAFAPz/AAACAAAAAAAFAP3/AAACAAAAAAAFAP//AAACAAAAAAAFAAAAAAACAAAAAAAFAAEAAAACAAAAAAAFAAMAAAACAAAAAAAFAAQAAAACAAAAAAAFAAUAAAACAAAAAAAFAAcAAAACAAAAAAAFAAgAAAACAAAAAAAFAAkAAAACAAAAAAAFAAsAAAACAAAAAAAFAAwAAAACAAAAAAAFAA0AAAACAAAAAAAFAA8AAAACAAAAAAAFABAAAAACAAAAAAAFABEAAAACAAAAAAAFABMAAAACAAAAAAAGAO3/AAACAAAAAAAGAO7/AAACAAAAAAAGAO//AAACAAAAAAAGAPH/AAACAAAAAAAGAPL/AAACAAAAAAAGAPP/AAACAAAAAAAGAPX/AAACAAAAAAAGAPb/AAACAAAAAAAGAPf/AAACAAAAAAAGAPn/AAACAAAAAAAGAPr/AAACAAAAAAAGAPv/AAACAAAAAAAGAP3/AAACAAAAAAAGAP7/AAACAAAAAAAGAP//AAACAAAAAAAGAAEAAAACAAAAAAAGAAIAAAACAAAAAAAGAAMAAAACAAAAAAAGAAUAAAACAAAAAAAGAAYAAAACAAAAAAAGAAcAAAACAAAAAAAGAAkAAAACAAAAAAAGAAoAAAACAAAAAAAGAAsAAAACAAAAAAAGAA0AAAACAAAAAAAGAA4AAAACAAAAAAAGAA8AAAACAAAAAAAGABEAAAACAAAAAAAGABIAAAACAAAAAAAGABMAAAACAAAAAAAHAOz/AAACAAAAAAAHAO3/AAACAAAAAAAHAO//AAACAAAAAAAHAPD/AAACAAAAAAAHAPH/AAACAAAAAAAHAPP/AAACAAAAAAAHAPT/AAACAAAAAAAHAPX/AAACAAAAAAAHAPf/AAACAAAAAAAHAPj/AAACAAAAAAAHAPn/AAACAAAAAAAHAPv/AAACAAAAAAAHAPz/AAACAAAAAAAHAP3/AAACAAAAAAAHAP//AAACAAAAAAAHAAAAAAACAAAAAAAHAAEAAAACAAAAAAAHAAMAAAACAAAAAAAHAAQAAAACAAAAAAAHAAUAAAACAAAAAAAHAAcAAAACAAAAAAAHAAgAAAACAAAAAAAHAAkAAAACAAAAAAAHAAsAAAACAAAAAAAHAAwAAAACAAAAAAAHAA0AAAACAAAAAAAHAA8AAAACAAAAAAAHABAAAAACAAAAAAAHABEAAAACAAAAAAAHABMAAAACAAAAAAAIAO3/AAACAAAAAAAIAO7/AAACAAAAAAAIAO//AAACAAAAAAAIAPH/AAACAAAAAAAIAPL/AAACAAAAAAAIAPP/AAACAAAAAAAIAPX/AAACAAAAAAAIAPb/AAACAAAAAAAIAPf/AAACAAAAAAAIAPn/AAACAAAAAAAIAPr/AAACAAAAAAAIAPv/AAACAAAAAAAIAP3/AAACAAAAAAAIAP7/AAACAAAAAAAIAP//AAACAAAAAAAIAAEAAAACAAAAAAAIAAIAAAACAAAAAAAIAAMAAAACAAAAAAAIAAUAAAACAAAAAAAIAAYAAAACAAAAAAAIAAcAAAACAAAAAAAIAAkAAAACAAAAAAAIAAoAAAACAAAAAAAIAAsAAAACAAAAAAAIAA0AAAACAAAAAAAIAA4AAAACAAAAAAAIAA8AAAACAAAAAAAIABEAAAACAAAAAAAIABIAAAACAAAAAAAIABMAAAACAAAAAAAJAOz/AAACAAAAAAAJAO3/AAACAAAAAAAJAO//AAACAAAAAAAJAPD/AAACAAAAAAAJAPH/AAACAAAAAAAJAPP/AAACAAAAAAAJAPT/AAACAAAAAAAJAPX/AAACAAAAAAAJAPf/AAACAAAAAAAJAPj/AAACAAAAAAAJAPn/AAACAAAAAAAJAPv/AAACAAAAAAAJAPz/AAACAAAAAAAJAP3/AAACAAAAAAAJAP//AAACAAAAAAAJAAAAAAACAAAAAAAJAAEAAAACAAAAAAAJAAMAAAACAAAAAAAJAAQAAAACAAAAAAAJAAUAAAACAAAAAAAJAAcAAAACAAAAAAAJAAgAAAACAAAAAAAJAAkAAAACAAAAAAAJAAsAAAACAAAAAAAJAAwAAAACAAAAAAAJAA0AAAACAAAAAAAJAA8AAAACAAAAAAAJABAAAAACAAAAAAAJABEAAAACAAAAAAAJABMAAAACAAAAAAAKAO3/AAACAAAAAAAKAO7/AAACAAAAAAAKAO//AAACAAAAAAAKAPH/AAACAAAAAAAKAPL/AAACAAAAAAAKAPP/AAACAAAAAAAKAPX/AAACAAAAAAAKAPb/AAACAAAAAAAKAPf/AAACAAAAAAAKAPn/AAACAAAAAAAKAPr/AAACAAAAAAAKAPv/AAACAAAAAAAKAP3/AAACAAAAAAAKAP7/AAACAAAAAAAKAP//AAACAAAAAAAKAAEAAAACAAAAAAAKAAIAAAACAAAAAAAKAAMAAAACAAAAAAAKAAUAAAACAAAAAAAKAAYAAAACAAAAAAAKAAcAAAACAAAAAAAKAAkAAAACAAAAAAAKAAoAAAACAAAAAAAKAAsAAAACAAAAAAAKAA0AAAACAAAAAAAKAA4AAAACAAAAAAAKAA8AAAACAAAAAAAKABEAAAACAAAAAAAKABIAAAACAAAAAAAKABMAAAACAAAAAAALAOz/AAACAAAAAAALAO3/AAACAAAAAAALAO//AAACAAAAAAALAPD/AAACAAAAAAALAPH/AAACAAAAAAALAPP/AAACAAAAAAALAPT/AAACAAAAAAALAPX/AAACAAAAAAALAPf/AAACAAAAAAALAPj/AAACAAAAAAALAPn/AAACAAAAAAALAPv/AAACAAAAAAALAPz/AAACAAAAAAALAP3/AAACAAAAAAALAP//AAACAAAAAAALAAAAAAACAAAAAAALAAEAAAACAAAAAAALAAMAAAACAAAAAAALAAQAAAACAAAAAAALAAUAAAACAAAAAAALAAcAAAACAAAAAAALAAgAAAACAAAAAAALAAkAAAACAAAAAAALAAsAAAACAAAAAAALAAwAAAACAAAAAAALAA0AAAACAAAAAAALAA8AAAACAAAAAAALABAAAAACAAAAAAALABEAAAACAAAAAAALABMAAAACAAAAAAAMAO3/AAACAAAAAAAMAO7/AAACAAAAAAAMAO//AAACAAAAAAAMAPH/AAACAAAAAAAMAPL/AAACAAAAAAAMAPP/AAACAAAAAAAMAPX/AAACAAAAAAAMAPb/AAACAAAAAAAMAPf/AAACAAAAAAAMAPn/AAACAAAAAAAMAPr/AAACAAAAAAAMAPv/AAACAAAAAAAMAP3/AAACAAAAAAAMAP7/AAACAAAAAAAMAP//AAACAAAAAAAMAAEAAAACAAAAAAAMAAIAAAACAAAAAAAMAAMAAAACAAAAAAAMAAUAAAACAAAAAAAMAAYAAAACAAAAAAAMAAcAAAACAAAAAAAMAAkAAAACAAAAAAAMAAoAAAACAAAAAAAMAAsAAAACAAAAAAAMAA0AAAACAAAAAAAMAA4AAAACAAAAAAAMAA8AAAACAAAAAAAMABEAAAACAAAAAAAMABIAAAACAAAAAAAMABMAAAACAAAAAAANAOz/AAACAAAAAAANAO3/AAACAAAAAAANAO//AAACAAAAAAANAPD/AAACAAAAAAANAPH/AAACAAAAAAANAPP/AAACAAAAAAANAPT/AAACAAAAAAANAPX/AAACAAAAAAANAPf/AAACAAAAAAANAPj/AAACAAAAAAANAPn/AAACAAAAAAANAPv/AAACAAAAAAANAPz/AAACAAAAAAANAP3/AAACAAAAAAANAP//AAACAAAAAAANAAAAAAACAAAAAAANAAEAAAACAAAAAAANAAMAAAACAAAAAAANAAQAAAACAAAAAAANAAUAAAACAAAAAAANAAcAAAACAAAAAAANAAgAAAACAAAAAAANAAkAAAACAAAAAAANAAsAAAACAAAAAAANAAwAAAACAAAAAAANAA0AAAACAAAAAAANAA8AAAACAAAAAAANABAAAAACAAAAAAANABEAAAACAAAAAAANABMAAAACAAAAAAAOAO3/AAACAAAAAAAOAO7/AAACAAAAAAAOAO//AAACAAAAAAAOAPH/AAACAAAAAAAOAPL/AAACAAAAAAAOAPP/AAACAAAAAAAOAPX/AAACAAAAAAAOAPb/AAACAAAAAAAOAPf/AAACAAAAAAAOAPn/AAACAAAAAAAOAPr/AAACAAAAAAAOAPv/AAACAAAAAAAOAP3/AAACAAAAAAAOAP7/AAACAAAAAAAOAP//AAACAAAAAAAOAAEAAAACAAAAAAAOAAIAAAACAAAAAAAOAAMAAAACAAAAAAAOAAUAAAACAAAAAAAOAAYAAAACAAAAAAAOAAcAAAACAAAAAAAOAAkAAAACAAAAAAAOAAoAAAACAAAAAAAOAAsAAAACAAAAAAAOAA0AAAACAAAAAAAOAA4AAAACAAAAAAAOAA8AAAACAAAAAAAOABEAAAACAAAAAAAOABIAAAACAAAAAAAOABMAAAACAAAAAAAPAOz/AAACAAAAAAAPAO3/AAACAAAAAAAPAO//AAACAAAAAAAPAPD/AAACAAAAAAAPAPH/AAACAAAAAAAPAPP/AAACAAAAAAAPAPT/AAACAAAAAAAPAPX/AAACAAAAAAAPAPf/AAACAAAAAAAPAPj/AAACAAAAAAAPAPn/AAACAAAAAAAPAPv/AAACAAAAAAAPAPz/AAACAAAAAAAPAP3/AAACAAAAAAAPAP//AAACAAAAAAAPAAAAAAACAAAAAAAPAAEAAAACAAAAAAAPAAMAAAACAAAAAAAPAAQAAAACAAAAAAAPAAUAAAACAAAAAAAPAAcAAAACAAAAAAAPAAgAAAACAAAAAAAPAAkAAAACAAAAAAAPAAsAAAACAAAAAAAPAAwAAAACAAAAAAAPAA0AAAACAAAAAAAPAA8AAAACAAAAAAAPABAAAAACAAAAAAAPABEAAAACAAAAAAAPABMAAAACAAAAAAAQAO3/AAACAAAAAAAQAO7/AAACAAAAAAAQAO//AAACAAAAAAAQAPH/AAACAAAAAAAQAPL/AAACAAAAAAAQAPP/AAACAAAAAAAQAPX/AAACAAAAAAAQAPb/AAACAAAAAAAQAPf/AAACAAAAAAAQAPn/AAACAAAAAAAQAPr/AAACAAAAAAAQAPv/AAACAAAAAAAQAP3/AAACAAAAAAAQAP7/AAACAAAAAAAQAP//AAACAAAAAAAQAAEAAAACAAAAAAAQAAIAAAACAAAAAAAQAAMAAAACAAAAAAAQAAUAAAACAAAAAAAQAAYAAAACAAAAAAAQAAcAAAACAAAAAAAQAAkAAAACAAAAAAAQAAoAAAACAAAAAAAQAAsAAAACAAAAAAAQAA0AAAACAAAAAAAQAA4AAAACAAAAAAAQAA8AAAACAAAAAAAQABEAAAACAAAAAAAQABIAAAACAAAAAAAQABMAAAACAAAAAAARAOz/AAACAAAAAAARAO3/AAACAAAAAAARAO//AAACAAAAAAARAPD/AAACAAAAAAARAPH/AAACAAAAAAARAPP/AAACAAAAAAARAPT/AAACAAAAAAARAPX/AAACAAAAAAARAPf/AAACAAAAAAARAPj/AAACAAAAAAARAPn/AAACAAAAAAARAPv/AAACAAAAAAARAPz/AAACAAAAAAARAP3/AAACAAAAAAARAP//AAACAAAAAAARAAAAAAACAAAAAAARAAEAAAACAAAAAAARAAMAAAACAAAAAAARAAQAAAACAAAAAAARAAUAAAACAAAAAAARAAcAAAACAAAAAAARAAgAAAACAAAAAAARAAkAAAACAAAAAAARAAsAAAACAAAAAAARAAwAAAACAAAAAAARAA0AAAACAAAAAAARAA8AAAACAAAAAAARABAAAAACAAAAAAARABEAAAACAAAAAAARABMAAAACAAAAAAASAO3/AAACAAAAAAASAO7/AAACAAAAAAASAO//AAACAAAAAAASAPH/AAACAAAAAAASAPL/AAACAAAAAAASAPP/AAACAAAAAAASAPX/AAACAAAAAAASAPb/AAACAAAAAAASAPf/AAACAAAAAAASAPn/AAACAAAAAAASAPr/AAACAAAAAAASAPv/AAACAAAAAAASAP3/AAACAAAAAAASAP7/AAACAAAAAAASAP//AAACAAAAAAASAAEAAAACAAAAAAASAAIAAAACAAAAAAASAAMAAAACAAAAAAASAAUAAAACAAAAAAASAAYAAAACAAAAAAASAAcAAAACAAAAAAASAAkAAAACAAAAAAASAAoAAAACAAAAAAASAAsAAAACAAAAAAASAA0AAAACAAAAAAASAA4AAAACAAAAAAASAA8AAAACAAAAAAASABEAAAACAAAAAAASABIAAAACAAAAAAASABMAAAACAAAAAAATAOz/AAACAAAAAAATAO3/AAACAAAAAAATAO//AAACAAAAAAATAPD/AAACAAAAAAATAPH/AAACAAAAAAATAPP/AAACAAAAAAATAPT/AAACAAAAAAATAPX/AAACAAAAAAATAPf/AAACAAAAAAATAPj/AAACAAAAAAATAPn/AAACAAAAAAATAPv/AAACAAAAAAATAPz/AAACAAAAAAATAP3/AAACAAAAAAATAP//AAACAAAAAAATAAAAAAACAAAAAAATAAEAAAACAAAAAAATAAMAAAACAAAAAAATAAQAAAACAAAAAAATAAUAAAACAAAAAAATAAcAAAACAAAAAAATAAgAAAACAAAAAAATAAkAAAACAAAAAAATAAsAAAACAAAAAAATAAwAAAACAAAAAAATAA0AAAACAAAAAAATAA8AAAACAAAAAAATABAAAAACAAAAAAATABEAAAACAAAAAAATABMAAAACAAAAAAA=")
tile_set = SubResource("TileSet_e7xmb")
script = ExtResource("6_w8aok")

[node name="Grid" type="TileMapLayer" parent="EdgesShader"]
modulate = Color(1, 1, 1, 0.35)
tile_set = SubResource("TileSet_fdjwu")
script = ExtResource("8_owd5w")

[connection signal="edge_created" from="EdgesShader/Edges" to="." method="_on_edge_created"]
[connection signal="edge_of_master_changed" from="EdgesShader/Edges" to="Rails" method="_on_edges_edge_changed"]
[connection signal="edge_removed" from="EdgesShader/Edges" to="." method="_on_edge_removed"]
